QComboBox: Start blockMouseReleaseTimer after showPopup call

The layout/size hinting done in showPopup should not count towards the
mouse release blocking timeout as it might take more then the double click
interval itself, causing the popup to hide immediately on button release.

Task-number: QTBUG-67583
Change-Id: I37ac77ac331a4f865a9242581232b85606f883c5