src/widgets/widgets/qcombobox.cpp
@@ -3158,7 +3158,6 @@ void QComboBoxPrivate::showPopupFromMouseEvent(QMouseEvent *e)
 #endif
             // We've restricted the next couple of lines, because by not calling
             // viewContainer(), we avoid creating the QComboBoxPrivateContainer.
-            viewContainer()->blockMouseReleaseTimer.start(QApplication::doubleClickInterval());
             viewContainer()->initialClickPosition = q->mapToGlobal(e->pos());
 #ifdef QT_KEYPAD_NAVIGATION
         }
@@ -3168,6 +3167,7 @@ void QComboBoxPrivate::showPopupFromMouseEvent(QMouseEvent *e)
         // If it was not called the viewContainer would ignore event since it didn't have
         // a mousePressEvent first.
         if (viewContainer())
+            viewContainer()->blockMouseReleaseTimer.start(QApplication::doubleClickInterval());
             viewContainer()->maybeIgnoreMouseButtonRelease = false;
     } else {
 #ifdef QT_KEYPAD_NAVIGATION
